--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -680,5 +680,17 @@ footer{
         text-align: center;
     }
 }
+.media-class{
+    margin-right: 30px;
+}
+.media-class a{
+    color: #ff3d1c;
+    margin-right: 20px;
+}
+@media only screen and (max-width: 559px) {
+   .footer-last {
+       flex-direction: column !important;
+   }
+}
 
  /* --------------------------------------------------------------footer start------------------------------------ */
